@@ -32,6 +32,7 @@ class VacuumOverallListener {
 		$this->statistics['numberOfPagesRemoved'] = 0;
 		$this->statistics['numberOfRowVersions'] = 0;
 		$this->statistics['numberOfRemovableRowVersions'] = 0;
+		$this->statistics['duration'] = 0;
 	}
 	
 	function fireEvent(& $vacuumedTable) {
@@ -40,6 +41,7 @@ class VacuumOverallListener {
 		$this->statistics['numberOfPagesRemoved'] += $vacuumedTable->getNumberOfPagesRemoved();
 		$this->statistics['numberOfRowVersions'] += $vacuumedTable->getTotalNumberOfRows();
 		$this->statistics['numberOfRemovableRowVersions'] += $vacuumedTable->getNumberOfRemovableRows();
+		$this->statistics['duration'] += $vacuumedTable->getDuration();
 		
 		if(!isset($this->statisticsPerDatabase[$vacuumedTable->getDatabase()]['numberOfTables'])) {
 			$this->statisticsPerDatabase[$vacuumedTable->getDatabase()]['numberOfTables'] = 0;
@@ -47,12 +49,14 @@ class VacuumOverallListener {
 			$this->statisticsPerDatabase[$vacuumedTable->getDatabase()]['numberOfPagesRemoved'] = 0;
 			$this->statisticsPerDatabase[$vacuumedTable->getDatabase()]['numberOfRowVersions'] = 0;
 			$this->statisticsPerDatabase[$vacuumedTable->getDatabase()]['numberOfRemovableRowVersions'] = 0;
+			$this->statisticsPerDatabase[$vacuumedTable->getDatabase()]['duration'] = 0;
 		}
 		$this->statisticsPerDatabase[$vacuumedTable->getDatabase()]['numberOfTables'] ++;
 		$this->statisticsPerDatabase[$vacuumedTable->getDatabase()]['numberOfPages'] += $vacuumedTable->getNumberOfPages();
 		$this->statisticsPerDatabase[$vacuumedTable->getDatabase()]['numberOfPagesRemoved'] += $vacuumedTable->getNumberOfPagesRemoved();
 		$this->statisticsPerDatabase[$vacuumedTable->getDatabase()]['numberOfRowVersions'] += $vacuumedTable->getTotalNumberOfRows();
 		$this->statisticsPerDatabase[$vacuumedTable->getDatabase()]['numberOfRemovableRowVersions'] += $vacuumedTable->getNumberOfRemovableRows();
+		$this->statisticsPerDatabase[$vacuumedTable->getDatabase()]['duration'] += $vacuumedTable->getDuration();
 	}
 	
 	function close() {
