@@ -1,13 +1,17 @@
 body { background-color: #FFFFFF; }
 * { font-family: Verdana, Arial, Helvetica; }
 div, p, th, td { font-size:12px; }
+a {color:rgb(180, 80, 80);text-decoration:underline}
+a:hover {color:rgb(180, 80, 80);text-decoration:none}
 h1 { font-size:16px; color:#FFFFFF; font-weight:normal; padding:6px; background-color:rgb(180, 80, 80); margin-bottom:0px; }
 h2 { margin-top:15px; margin-bottom:10px; font-weight:normal; font-size:14px; padding:2px 10px 2px 0px; border-bottom:1px solid #7B8CBE; color:#7B8CBE; }
 h2 a, h2 a:hover { color:black; text-decoration:none; }
+h3 { color:#FFB462; border-bottom:1px solid #FFB462; font-weight:bold; font-size:12px; margin-bottom:10px; padding-bottom:2px; }
 div.menu { background-color:rgb(220,230,252); padding:4px; margin-bottom:20px; }
 div.menu a { padding-right:3px; padding-left:3px; color:black; text-decoration:none; }
 div.menu a:hover { padding-right:3px; padding-left:3px; padding-top:2px; padding-bottom:2px; text-decoration:none; background-color:rgb(180, 80, 80); color:white; -moz-border-radius:3px; }
 div.information { border:1px solid #FFB462; -moz-border-radius:6px;	padding:10px; margin-top:5px; background-color:#FEE3C4; }
+.tip { background-color:#EBF0FC; -moz-border-radius:10px; padding:6px; margin:5px; }
 ul { padding-left: 14px; padding-top: 0px; padding-bottom: 0px; margin-bottom: 0px; margin-top: 0px; }
 ul li { list-style-type: square; }
 div.reports { padding:4px; }
@@ -42,6 +46,8 @@ table.queryList input { border:1px solid black; background-color:#FFFFFF; paddin
 table.sortable a.sortheader { color: black; text-decoration: none; }
 table.sortable a.sortheader:hover { color: rgb(180, 80, 80); }
 table.sortable span.sortarrow { color: black; text-decoration: none; font-weight:bold; }
+.indexInformation { background-color:#EBF0FC; -moz-border-radius:10px; padding-left:20px; padding-right:20px; padding-top:10px; padding-bottom:10px; margin:5px; }
+.indexInformation table.queryList { margin-top:10px; }
 div.footer { font-size:12px; margin-top:30px; margin-bottom:400px; background-color:rgb(180, 80, 80); padding:5px; text-align:right; color:white; }
 div.footer a, div.footer a:hover { color:white; text-decoration:underline; }
 
